# fleeting-jobs-backend

./: docker-compose.yml  pom.xml
backend/: docker-compose.yml  pom.xml
backend/src/main/resources/: application.properties
backend/src/main/resources/seeds/companies/: companies_seed.csv
onet_database/: 01_content_model_reference.sql  04_scales_reference.sql  05_education_categories.sql  06_training_and_experience_categories.sql  13_education.sql  15_career_interest_types.sql  17_career_interest_type_keywords.sql  18_specific_interest_areas_to_career_interest_types.sql  19_interests_illustrative_activities.sql  20_interests_illustrative_occupations.sql  21_job_zones.sql  31_gwas_to_iwas.sql  32_gwas_to_iwas_to_dwas.sql  33_tasks_to_dwas.sql  40_essential_skills_to_work_activities.sql  41_essential_skills_to_work_context.sql  42_transferable_skills_to_work_activities.sql  43_transferable_skills_to_work_context.sql  44_work_styles_to_work_activities.sql  45_work_styles_to_work_context.sql
src/main/resources/: application.properties
worker-service/: .gitignore  main.py  pyproject.toml
worker-service/app/: main.py
worker-service/app/common/rabbit/: rabbit_config.py  rabbit_service.py
worker-service/app/example_parser_config/: example_parser_config.py  rbc.json
worker-service/app/modules/jobs/: job_parser.py  jobs_callback.py
worker-service/app/modules/jobs/types/: ParserTemplate.py  ScrapeJobListRequest.py
worker-service/app/modules/resume/: generate_resume_pdf.py
worker-service/app/scraping/: scraping_service.py
(+60 files in other folders)
