[project]
name = "worker-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.139.0",
    "lxml>=6.1.1",
    "pika>=1.4.1",
    "playwright>=1.61.0",
    "pydantic>=2.13.4",
    "uvicorn>=0.51.0",
]
[tool.taskipy.tasks]
dev = "uvicorn app.main:app --reload"
test = "pytest"
lint = "ruff check ."
format = "ruff format ."

[dependency-groups]
dev = [
    "taskipy>=1.14.1",
]
